회원가입 후 redirect

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Insert title here</title>
+  <title>Kakao Login</title>
 </head>
 <body>
 	<h1>메인화면</h1>
+    <span th:text="${userResponseDto.nm}"></span>님 환영합니다. ~
 </body>
 </html>
